Just getting the juices flowinw

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header>
-
+        <h2>HTML Test</h2>
     </header>
-    <main>
+    <!-- This is where the action is going to go down -->
+    <main class="quiz-content" id="quiz-content">
 
     </main>
     <script src="./assets/js/script.js"></script>
