--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <!-- This is where the action is going to go down -->
     <main class="quiz-content" id="quiz-content">
+        <h1 id="bigLetters"></h1>
 
     </main>
     <script src="./assets/js/script.js"></script>
