I have done it so html elements are not appended all the time but html elements are set to new values

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- This is where the action is going to go down -->
     <main class="quiz-content" id="quiz-content">
         <h1 id="content-heading"></h1>
-
+        <div id="content-area"></div>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
