I have a timer starting from 75 and rolling down

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h2>HTML Test</h2>
+        <a href="something">view high scores</a>
+        <p>Time: <span id="count"></span></p>
     </header>
     <!-- This is where the action is going to go down -->
     <main class="quiz-content" id="quiz-content">
