I am recieving the high score and initials and I need to figure out how to do local storage with them

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <a href="something">view high scores</a>
         <p>Time: <span id="count"></span></p>
     </header>
