I have this thing looking nice. Just need to sort the array

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="header">
-        <a href="something">view high scores</a>
+        <a id="high-score-button">view high scores</a>
         <p>Time: <span id="count"></span></p>
     </header>
     <!-- This is where the action is going to go down -->
